kubernetes/apps/security/authentik/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: domain
spec:
  hostnames: ["sso.vzkn.eu"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
